Fixeo de todos los errores en archivos linkeados, menu desplegable, y overflow del html

--- a/wp-content/themes/muzic/style.css
+++ b/wp-content/themes/muzic/style.css
@@ -388,6 +388,32 @@ textarea{
 }
     
 
+.login .logo{
+    width: 300px;
+    fill: #ffce80;
+}
+
+.login-box{
+    width: 400px;
+    /*max-width: 600px;*/
+    text-align: left;
+    background: rgba(4,4,4,.65);
+    padding: 20px 50px 15px;
+    margin-right: 15px;
+    border-radius: 5px;
+    margin: 20px auto;
+}
+
+.login-box input{
+    border-radius: 0;
+    padding: 7px 35px;
+    border: 3px solid #ffce80;
+    color: #ffa515;
+    font-size: 20px;
+    height: auto;
+}
+
+
 
 @media screen and (max-width: 992px){
     .navbar-collapse.in, .navbar-collapse.collapsing {
@@ -395,10 +421,6 @@ textarea{
     }
     
 }
-
-
-
-
 @media screen and (min-width: 1201px){
     .archives .hero-title{
         top: -60px;
